added doc, fixed comments, added gen csv
